--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas==1.3.1
+pandas==1.4.1
+scikit-learn==1.1.1
 streamlit==1.8.1
 numpy==1.20.3
-lightgbm==3.3.2
-matplotlib==3.4.2
-scikit-learn==1.0.1
-xgboost
+matplotlib==3.5.1
+joblib==1.1.0
+shap==0.41.0
+seaborn==0.11.2
